--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -4,65 +4,59 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
+    --background: theme(colors.slate.100);
+    --foreground: theme(colors.slate.900);
 
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
+    --popover: theme(colors.slate.100);
+    --popover-foreground: theme(colors.slate.900);
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
+    --primary: theme(colors.slate.900);
+    --primary-foreground: theme(colors.slate.100);
 
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+    --secondary: theme(colors.slate.100);
+    --secondary-foreground: theme(colors.slate.900);
 
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
+    --muted: theme(colors.slate.300);
+    --muted-foreground: theme(colors.slate.700);
 
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
+    --accent: theme(colors.slate.200);
+    --accent-foreground: theme(colors.slate.800);
 
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
+    --destructive: theme(colors.red.500);
+    --destructive-foreground: theme(colors.white);
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
+    --border: theme(colors.slate.300);
+    --input: theme(colors.slate.300);
+    --ring: theme(colors.slate.900);
 
     --radius: 0.5rem;
   }
 
   [data-mode='dark'] {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
+    --background: theme(colors.slate.900);
+    --foreground: theme(colors.slate.100);
 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
+    --popover: theme(colors.slate.900);
+    --popover-foreground: theme(colors.slate.100);
 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
+    --primary: theme(colors.sky.700);
+    --primary-foreground: theme(colors.slate.100);
 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
+    --secondary: theme(colors.slate.800);
+    --secondary-foreground: theme(colors.slate.100);
 
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
+    --muted: theme(colors.slate.700);
+    --muted-foreground: theme(colors.slate.300);
 
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
+    --accent: theme(colors.slate.800);
+    --accent-foreground: theme(colors.slate.200);
 
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
+    --destructive: theme(colors.red.500);
+    --destructive-foreground: theme(colors.white);
 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
+    --border: theme(colors.slate.700);
+    --input: theme(colors.slate.700);
+    --ring: theme(colors.slate.100);
   }
 }
 
