--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -27,6 +27,7 @@
 
     --border: theme(colors.slate.300);
     --input: theme(colors.slate.300);
+    --ring: theme(colors.slate.900);
 
     --radius: 0.5rem;
   }
@@ -52,6 +53,7 @@
 
     --border: theme(colors.slate.700);
     --input: theme(colors.slate.700);
+    --ring: theme(colors.slate.100);
   }
 }
 
